[project]
name = "caesura-sdk-py"
version = "1.0.2"
description = "Caesura SDKs for Python AI frameworks"
requires-python = ">=3.10"

[tool.uv.workspace]
members = ["packages/*"]

[dependency-groups]
dev = [
    "ruff>=0.11",
    "mypy>=1.15",
    "pytest>=8.0",
    "pytest-asyncio>=0.25",
    "python-semantic-release>=9.0",
    "respx>=0.22",
]

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM", "TCH", "RUF"]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["packages/caesura-core/tests", "packages/caesura-openai/tests"]

[tool.semantic_release]
version_toml = [
    "pyproject.toml:project.version",
    "packages/caesura-core/pyproject.toml:project.version",
    "packages/caesura-openai/pyproject.toml:project.version",
]
commit_message = "chore(release): v{version}"

[tool.semantic_release.branches.main]
match = "main"

[tool.semantic_release.commit_parser_options]
allowed_tags = ["feat", "fix", "perf", "refactor", "docs", "chore", "ci"]
